# othello

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  circle.cpp  circle.h  main.cpp  run.sh
src/: CMakeLists.txt  game.cpp  game.h  main.cpp
src/entities/: CMakeLists.txt  player.cpp  player.h
src/graphics/: CMakeLists.txt  board.cpp  board.h  point.h  screen.cpp  screen.h  tile.cpp  tile.h
src/utils/: CMakeLists.txt  constants.h  input.cpp  input.h
